--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "author": "Ido Schachter <ido.schachter@ironsrc.com>",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "ssh://git@github.com:id0Sch/largeJson.git"
+  }
   "dependencies": {
     "lodash.isarray": "^4.0.0",
     "lodash.isobject": "^3.0.2"
